--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <p>처음에는 소액으로 배팅을 시작하여 게임에 익숙해지세요. 경험이 쌓이면 배팅 금액을 조금씩 늘려가는 것이 좋습니다.</p>
                 
                 <h3>4. 보너스와 프로모션 활용</h3>
-                <p>카지노에서 제공하는 보너스와 <a href="https://evolutiongive.netlify.app/promotion">프로모션</a>을 적극 활용하세요. 추가 자금을 이용하여 더 많은 게임을 즐기고, 승리의 기회를 높일 수 있습니다.</p>
+                <p>카지노에서 제공하는 보너스와 <a href="https://damianhamilton.github.io/promotion">프로모션</a>을 적극 활용하세요. 추가 자금을 이용하여 더 많은 게임을 즐기고, 승리의 기회를 높일 수 있습니다.</p>
                 
                 <h3>5. 전략과 확률 이해</h3>
                 <p>각 게임의 기본 전략과 확률을 이해하는 것이 중요합니다. 특히 블랙잭이나 포커와 같은 전략적인 게임에서는 확률 계산과 최적의 플레이를 익히는 것이 유리합니다.</p>
